tests/NormalTests/paczka2/big_fuzzy/14684718.err
Error in line 1: CmWP8 A699 11,1
Error in line 4: CyuT A832 92,2
Error in line 17: 92DugnCt A816 74,8
Error in line 21: 92DugnCt A699 27,8
Error in line 11: LHsvK2DhE A832 25,6
Error in line 16: CyuT A832 2,3
Error in line 20: A562 A832 78,1
Error in line 39: A562 A699 2,9
Error in line 42: CmWP8 A832 65,9
Error in line 64: 92DugnCt A8a2 12,a
Error in line 60: 92DugnCt A832 45,5
Error in line 88: qAlUXSjwvm A699 -1,1
Error in line 83: CmWP8 A816 59,8
Error in line 84: qAlUXSjwvm A699 44,9
Error in line 107: A562 A816 32,3
Error in line 108: A562 A832 39,9
Error in line 104: CmWP8 A699 145,9
Error in line 116: CyuT A816 52,16
Error in line 122: qAlUXSjwvm A816 142,71
Error in line 119: A562 A832 99,7
Error in line 117: LHsvK2DhE A699 60,5
Error in line 143: LHsvK2DhE A816 80,28
Error in line 145: CyuT A832 `7,3
Error in line 144: CyuT A816 31,3
Error in line 146: CyuT A562 91,4
Error in line 142: LHsvK2DhE A816 24,2
Error in line 153: CmWP8 A832 92,2
Error in line 154: CyuT A816 23,8
Error in line 156: CmWP8 A699 70,0
Error in line 150: qAlUXSjwvm A816 163,6
Error in line 169: qAlUXSjwvm A832 55,1
Error in line 176: 92DugnCt A562 10,1
Error in line 172: CmWP8 A816 99,0
Error in line 175: CyuT A832 12,7
Error in line 168: fZJ A562 387,5
Error in line 178: CmWP8 A562 71,7
Error in line 186: 92DugnCt A832 100,0
Error in line 204: CmWP8 A832 66,2
Error in line 201: 92DugnCt A816 2,0
Error in line 212: 92DugnCt A832 30,56
Error in line 209: CyuT A832 191,2
Error in line 232: qAlUXSjwvm A832 33,4
Error in line 235: 92DugnCt A562 69,2
Error in line 226: CmWP8 A562 96,9
Error in line 241: LHsvK2DhE A816 68,7
